Made changes to mail appearances

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Analygram
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:lUYYfPMCOXs548C/hSXPDJQGW1iRUXCWjl5RNqwd1Gs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql11.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql11680035
+DB_USERNAME=sql11680035
+DB_PASSWORD=aEEk6MLCeC
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=analygram1@gmail.com
+MAIL_PASSWORD="okdl tzpv pulg eagp"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="analygram1@gmail.com"
+MAIL_FROM_NAME="ANALYGRAM"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
