--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,5 @@
 <IfModule mod_rewrite.c>
+    Header set Access-Control-Allow-Origin: *
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
